# Seeker

./: README.md  ROADMAP.md  index.html  package.json
.github/workflows/: pipeline.yml
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  watcher.rs
src-tauri/src/commands/: downloader.rs  fs.rs  mod.rs  navigation.rs  preview.rs  search.rs  size.rs  storage.rs  window.rs
src/assets/: App.css  Editor.css  Settings.css
src/components/: AppIcon.tsx  CommandPalette.tsx  ContextMenu.tsx  FileBrowser.tsx  LoadingOverlay.tsx  Modal.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx
src/components/FileBrowser/: FileIcon.tsx  GridView.tsx  ListView.tsx
src/features/explorer/components/: BatchRenameModal.tsx  ExplorerModals.tsx  FileBrowser.tsx  MenuBar.tsx  QuickLook.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TaskDrawer.tsx  Toolbar.tsx
src/features/explorer/context/: ExplorerContext.tsx
src/features/explorer/hooks/: useCommandPalette.ts  useDirectoryWatcher.ts  useExplorerContextMenu.ts  useExplorerData.ts  useExplorerInteraction.ts  useExplorerKeyboard.ts  useExplorerNavigation.ts  useExplorerState.ts  useExternalDragDrop.ts  useFileDragDrop.ts  (+9 more)
src/hooks/: useContextMenu.ts  useHistory.ts  useSelection.ts  useSettings.ts  useSettings.tsx  useTabs.ts
src/services/: apiService.ts
src/utils/: dragDrop.ts  formatters.ts  mockData.ts  path.ts  ui.ts
src/views/: Editor.tsx  Explorer.tsx  QuickLookPage.tsx  Settings.tsx
(+12 files in other folders)
