[package]
name = "seeker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seeker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38.4"
rayon = "1.12.0"
ignore = "0.4.25"
num_cpus = "1.17.0"
trash = "5.2.0"
opener = "0.8.4"
tauri-plugin-dialog = "2.7.0"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
thiserror = "2"
tauri-plugin-drag = "2.1.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
jwalk = "0.8.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

